--- a/styles/css/navfooter.css
+++ b/styles/css/navfooter.css
@@ -10,7 +10,7 @@ body {
 
 /**************************************************Header**************************************************/
 header {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   position: fixed;
   height: 100px;
   display: flex;
@@ -108,4 +108,4 @@ footer .footercontent #foot-3 i {
   cursor: pointer;
   scale: 1.7;
   padding: 10px;
-}/*# sourceMappingURL=navfooter.css.map */
+}
