--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,5 +1,27 @@
-h1 {
-  color: blue;
-  font-weight: bold;
-  text-decoration: underline;
+.content {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+.content h1 {
+  font-size: 55px;
+  margin-bottom: 20px;
+}
+.content #logo2 img {
+  margin-bottom: 20px;
+  box-shadow: 4px 0 50px 20px rgba(185, 129, 102, 0.4);
+}
+.content #slogan {
+  font-size: 35px;
+  font-style: italic;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.content #intro {
+  font-size: 30px;
+  margin-bottom: 30px;
+  text-align: center;
 }
