--- a/styles/Pages/nous.scss
+++ b/styles/Pages/nous.scss
@@ -1,7 +1,27 @@
 @import "../modules/variables";
 @import "../modules/mixins";
 
-h1{
-    color: black;
-    font-size: 50px;
+
+.content{
+    @include max1440;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+        h1{
+            color: $brun;
+            font-size: 50px;
+            text-decoration: underline;
+            margin-bottom: 20px;
+        }
+
+        p{
+            font-size: 25px;
+            margin-bottom: 30px;
+            text-align: justify;
+                strong{
+                    font-style: italic;
+                    //font-weight: bold;
+                 }
+        }
 }
