--- a/styles/css/nous.css
+++ b/styles/css/nous.css
@@ -1,4 +1,22 @@
-h1 {
-  color: black;
+.content {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+.content h1 {
+  color: #B98166;
   font-size: 50px;
+  text-decoration: underline;
+  margin-bottom: 20px;
+}
+.content p {
+  font-size: 25px;
+  margin-bottom: 30px;
+  text-align: justify;
+}
+.content p strong {
+  font-style: italic;
 }
