--- a/styles/Layout/navfooter.scss
+++ b/styles/Layout/navfooter.scss
@@ -4,7 +4,7 @@
 body{
     font-family: 'Montserrat' , sans-serif;
     font-size: 100%;
-    height: 100vh;
+    min-height: 100vh;
     margin: auto;
     background-color: $blanc;
     font-size: 20px;
