--- a/styles/Pages/contact.scss
+++ b/styles/Pages/contact.scss
@@ -1,6 +1,38 @@
 @import "../modules/variables";
 @import "../modules/mixins";
 
-h1 {
-    color: red;
+.content{
+        @include max1440;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+        h1{
+            color: $brun;
+            font-size: 50px;
+            text-decoration: underline;
+            margin-bottom: 20px
+        }
+           address{
+                background-color: rgba($color: $brun, $alpha: 0.7);
+                aspect-ratio: 1/1;
+                width: 65%;
+                margin-bottom: 30px;
+                border-radius: 10px;
+                font-size: 30px ;
+                padding:50px 35px;
+            }
+                
+                li{
+                    display: flex;
+                    padding: 30px 0;
+                    font-size: 35px;
+                }
+                i{
+                    margin-right: 10px;
+                }
+                a i{
+                    scale: 1.7;
+                    margin: 0 25px;
+                }
 }
