--- a/styles/css/contact.css
+++ b/styles/css/contact.css
@@ -1,3 +1,35 @@
-h1 {
-  color: red;
+.content {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+.content h1 {
+  color: #B98166;
+  font-size: 50px;
+  text-decoration: underline;
+  margin-bottom: 20px;
+}
+.content address {
+  background-color: rgba(185, 129, 102, 0.7);
+  aspect-ratio: 1/1;
+  width: 65%;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  font-size: 30px;
+  padding: 50px 35px;
+}
+.content li {
+  display: flex;
+  padding: 30px 0;
+  font-size: 35px;
+}
+.content i {
+  margin-right: 10px;
+}
+.content a i {
+  scale: 1.7;
+  margin: 0 25px;
 }
