--- a/styles/css/navfooter.css
+++ b/styles/css/navfooter.css
@@ -2,7 +2,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: auto;
   background-color: #F2F2F2;
   font-size: 20px;
