--- a/styles/Layout/navfooter.scss
+++ b/styles/Layout/navfooter.scss
@@ -14,6 +14,7 @@ body{
 /**************************************************Header**************************************************/
 
 header{
+    z-index: 50;
     background-color: #f5f5f5; 
     position: fixed;
     height: 100px;
