--- a/styles/Pages/missions.scss
+++ b/styles/Pages/missions.scss
@@ -3,6 +3,95 @@
 
 .content {
     @include max1440;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+
+    h1{
+        color: $brun;
+        font-size: 50px;
+        text-decoration: underline;
+        margin-bottom: 20px;
+    }
+
+    .missions-container {
+        width: 100%;
+        padding: 50px;
+        .card {
+            height: 400px;
+            // background-color: red;
+            width: 100%;
+            display: flex;
+
+            &:nth-child(1) {
+                margin-bottom: 30px;
+            }
+
+            img {
+                height: 350px;
+                aspect-ratio: 1/1;
+                background-color: $brun;
+                padding: 10px;
+                box-shadow: 5px 8px 30px 2px rgba($color: $brun, $alpha: .6);
+                z-index: 12;
+            }
+
+            .card-desc {
+                background-color: $blanc;
+                box-shadow: 4px 0 50px 20px rgba($color: $brun, $alpha: .4);
+                padding: 20px;
+                width: 80%;
+                height: 350px;
+                max-height: 350px;
+                margin-top: auto;
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+
+                .top {
+                    height: 250px;
+
+                    h2{
+                        font-size: 32px;
+                        color: $brun;
+                        margin-bottom: 8px;
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+
+                    p {
+                        font-size: 20px;
+                        text-overflow: hidden;
+                        height: 200px;
+                    }
+                }
+
+
+                .bottom {
+                    display: flex;
+                    justify-content: space-between;
+                    height: 20px;
+
+                    a {
+                        font-size: 20px;
+                        line-height: 20px;
+
+                        &:hover, &:hover i {
+                            color: $brun;
+
+                            i {
+                                transform: translateX(3px);
+                                transition: .2s transform;
+                            }
+                        }
+                    }
+                }
+
+            }
+        }
+    }
+
 
 }
