finished contact page

--- a/styles/Pages/contact.scss
+++ b/styles/Pages/contact.scss
@@ -7,32 +7,49 @@
         flex-direction: column;
         align-items: center;
         margin-top: 20px;
+        padding: 0 20px;
         h1{
             color: $brun;
             font-size: 50px;
             text-decoration: underline;
             margin-bottom: 20px
         }
-           address{
-                background-color: rgba($color: $brun, $alpha: 0.7);
-                aspect-ratio: 1/1;
-                width: 65%;
-                margin-bottom: 30px;
-                border-radius: 10px;
-                font-size: 30px ;
-                padding:50px 35px;
+        address{
+            display: flex;
+            background-color: rgba($color: $brun, $alpha: 0.7);
+            margin-bottom: 30px;
+            width: 100%;
+            border-radius: 20px;
+            overflow: hidden;
+            font-size: 29px ;            
+            box-shadow: 4px 0 50px 20px rgba($color: $brun, $alpha: 0.4);
+            img{
+                width: 40%;
+                object-fit: cover;
             }
-                
+            .contact-card{
+                padding:50px 35px;
+            
+        
+            
                 li{
                     display: flex;
-                    padding: 30px 0;
+                    padding: 55px 0;
                     font-size: 35px;
                 }
                 i{
                     margin-right: 10px;
                 }
+                a{
+                    overflow-wrap: anywhere;
+                }
                 a i{
                     scale: 1.7;
                     margin: 0 25px;
                 }
+                li em{
+                    font-style: italic;
+                }
+            }
+        }
 }
