--- a/styles/Layout/navfooter.scss
+++ b/styles/Layout/navfooter.scss
@@ -54,7 +54,7 @@ nav ul{
         height: 100%;
         background-color: $beige;
         border: none;
-        font-size: 40px;
+        font-size: 38px;
         text-decoration: none;
         color: black;
         display: flex;
@@ -62,6 +62,7 @@ nav ul{
         align-items: center;
         border-radius: 15px;
         box-shadow: 4px 0 30px 10px rgba($color: #000000, $alpha: 0.2);
+        margin-right: 20px;
 
         &:hover{
             text-decoration: underline 2px;
