--- a/styles/css/contact.css
+++ b/styles/css/contact.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  padding: 0 20px;
 }
 .content h1 {
   color: #B98166;
@@ -13,23 +14,38 @@
   margin-bottom: 20px;
 }
 .content address {
+  display: flex;
   background-color: rgba(185, 129, 102, 0.7);
-  aspect-ratio: 1/1;
-  width: 65%;
   margin-bottom: 30px;
-  border-radius: 10px;
-  font-size: 30px;
+  width: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+  font-size: 29px;
+  box-shadow: 4px 0 50px 20px rgba(185, 129, 102, 0.4);
+}
+.content address img {
+  width: 40%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.content address .contact-card {
   padding: 50px 35px;
 }
-.content li {
+.content address .contact-card li {
   display: flex;
-  padding: 30px 0;
+  padding: 55px 0;
   font-size: 35px;
 }
-.content i {
+.content address .contact-card i {
   margin-right: 10px;
 }
-.content a i {
+.content address .contact-card a {
+  overflow-wrap: anywhere;
+}
+.content address .contact-card a i {
   scale: 1.7;
   margin: 0 25px;
+}
+.content address .contact-card li em {
+  font-style: italic;
 }
