--- a/styles/Pages/index.scss
+++ b/styles/Pages/index.scss
@@ -31,6 +31,7 @@
                 font-size: 30px;
                 margin-bottom: 30px;
                 text-align: center;
+                padding: 20px;
             }
 }
 
