--- a/styles/Pages/nous.scss
+++ b/styles/Pages/nous.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
+    padding: 20px;
         h1{
             color: $brun;
             font-size: 50px;
