--- a/styles/Pages/missions.scss
+++ b/styles/Pages/missions.scss
@@ -30,7 +30,7 @@
 
             img {
                 height: 350px;
-                aspect-ratio: 1/1;
+                //aspect-ratio: 1/1;
                 background-color: $brun;
                 padding: 10px;
                 box-shadow: 5px 8px 30px 2px rgba($color: $brun, $alpha: .6);
@@ -94,4 +94,38 @@
     }
 
 
+}
+
+@media screen and (min-width: 768px) and (max-width: 999px){
+    .content {
+        h1 {
+            font-size: 45px;
+        }
+        
+        .missions-container .card {
+            height: 300px;
+            img {
+                height: 250px;
+            }
+
+            .card-desc {
+                height: 250px;
+                .top{
+                    h2 {
+                        font-size: 26px;
+                    }
+
+                    p {
+                        height: auto;
+                        font-size: 18px;
+                    }
+                }
+
+                .bottom > *{
+                    font-size: 18px;
+                    line-height: 18px;
+                }
+            }
+        }
+    }
 }
