--- a/styles/css/navfooter.css
+++ b/styles/css/navfooter.css
@@ -6,6 +6,9 @@ body {
   margin: auto;
   background-color: #F2F2F2;
   font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /**************************************************Header**************************************************/
