--- a/styles/Layout/navfooter.scss
+++ b/styles/Layout/navfooter.scss
@@ -8,6 +8,9 @@ body{
     margin: auto;
     background-color: $blanc;
     font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
