--- a/styles/Pages/contact.scss
+++ b/styles/Pages/contact.scss
@@ -29,9 +29,11 @@
             }
             .contact-card{
                 padding:50px 35px;
-            
-        
-            
+                
+                &>p {
+                    font-size: 36px;
+                }
+
                 li{
                     display: flex;
                     padding: 55px 0;
@@ -52,4 +54,27 @@
                 }
             }
         }
+}
+
+@media screen and (min-width: 768px) and (max-width: 999px){
+    .content {
+        h1 {
+            font-size: 45px;
+        }
+
+        address {
+            .contact-card{
+                padding: 30px 20px;
+
+                &>p {
+                    font-size: 25px;
+                }
+
+                li {
+                    font-size: 21px;
+                    padding: 25px 0;
+                }
+            }
+        }
+    }
 }
