--- a/styles/Pages/nous.scss
+++ b/styles/Pages/nous.scss
@@ -26,3 +26,16 @@
                  }
         }
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 999px){
+    .content {
+        h1 {
+            font-size: 45px;
+        }
+
+        p {
+            font-size: 23px;
+        }
+    }
+}
