--- a/styles/css/missions.css
+++ b/styles/css/missions.css
@@ -26,7 +26,6 @@
 }
 .content .missions-container .card img {
   height: 350px;
-  aspect-ratio: 1/1;
   background-color: #B98166;
   padding: 10px;
   box-shadow: 5px 8px 30px 2px rgba(185, 129, 102, 0.6);
@@ -75,4 +74,30 @@
 .content .missions-container .card .card-desc .bottom a:hover i, .content .missions-container .card .card-desc .bottom a:hover i i {
   transform: translateX(3px);
   transition: 0.2s transform;
+}
+
+@media screen and (min-width: 768px) and (max-width: 999px) {
+  .content h1 {
+    font-size: 45px;
+  }
+  .content .missions-container .card {
+    height: 300px;
+  }
+  .content .missions-container .card img {
+    height: 250px;
+  }
+  .content .missions-container .card .card-desc {
+    height: 250px;
+  }
+  .content .missions-container .card .card-desc .top h2 {
+    font-size: 26px;
+  }
+  .content .missions-container .card .card-desc .top p {
+    height: auto;
+    font-size: 18px;
+  }
+  .content .missions-container .card .card-desc .bottom > * {
+    font-size: 18px;
+    line-height: 18px;
+  }
 }
