--- a/styles/css/nous.css
+++ b/styles/css/nous.css
@@ -21,3 +21,12 @@
 .content p strong {
   font-style: italic;
 }
+
+@media screen and (min-width: 768px) and (max-width: 999px) {
+  .content h1 {
+    font-size: 45px;
+  }
+  .content p {
+    font-size: 23px;
+  }
+}
